--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(akss)
 
-set(CMAKE_CXX_COMPILER "clang++")
+set(CMAKE_CXX_COMPILER "clang++-3.7")
 set(CMAKE_CXX_FLAGS "-Wall -Werror -std=c++11")
 
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/modules/")
