--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,18 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/modules/")
 
 include_directories(src)
 file(GLOB SOURCES "src/*.cpp")
-
+file(GLOB TEST_SOURCES "test/*.cpp")
 find_package(GMP REQUIRED)
-include_directories(${GOBJECT_INCLUDE_DIR})
+
+enable_testing()
+find_package(Threads REQUIRED)
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(akss ${SOURCES})
 target_link_libraries(akss gmp gmpxx)
+
+add_executable(akss_test ${TEST_SOURCES})
+target_link_libraries(akss_test gmp gmpxx gtest pthread)
+add_test(NAME akss_test COMMAND akss_test)
 
