Refactored test system Introduced p-local valuations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/modules/")
 
 include_directories(src)
 file(GLOB SOURCES "src/*.cpp")
+list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 file(GLOB TEST_SOURCES "test/*.cpp")
 find_package(GMP REQUIRED)
 
@@ -16,10 +17,10 @@ find_package(Threads REQUIRED)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
-add_executable(akss ${SOURCES})
+add_executable(akss ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp ${SOURCES})
 target_link_libraries(akss gmp gmpxx)
 
-add_executable(akss_test ${TEST_SOURCES})
+add_executable(akss_test ${SOURCES} ${TEST_SOURCES})
 target_link_libraries(akss_test gmp gmpxx gtest pthread)
 add_test(NAME akss_test COMMAND akss_test)
 
